# MedAgent

./: .env.example  .gitignore  CONTRIBUTING.md  PLAN.md  README.md  confidence_intervals.py  justfile  load_medagent_artifacts.py  pyproject.toml
checkpoints/: groups.pkl  model.pkl  model_v2.pkl  model_v3.pkl  y_pred.pkl  y_test.pkl  y_train.pkl
data/: convert.py
medagent/app/: app.py  chat_ui.py  prompts.py  schema.py
notebooks/: 0_EDA.ipynb  check.py  demo eda.ipynb  real eda.ipynb
src/medagent/: __init__.py  agent.py  app.py  cli.py  config.py  data.py  db.py  ingest.py  main.py  providers.py  sqlguard.py  tools.py
