[project]
name = "medagent"
version = "0.1.0"
description = "Clinical data intelligence with AI agents"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Alexander Wu", email = "alexander.wu7@gmail.com" }
]
dependencies = [
    "jupyterlab>=4.6.1",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "ollama>=0.6.2",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "streamlit>=1.58.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pandas-stubs>=3.0.3.260530",
    "ruff>=0.15.20",
]

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"
